# Sudoku-Solver

./: LICENSE  README.md  cabal.sandbox.config  sudoku-solver.cabal
.cabal-sandbox/x86_64-windows-ghc-8.0.2-packages.conf.d/: ansi-terminal-0.6.3.1-HyG7yk8a5bBEOA2WuaT7T0.conf  base-compat-0.9.3-m1TEyTenyr5nJN40TpHVj.conf  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6.conf  package.cache  parsec-3.1.11-DytKT37FVYQJRVdRwnazC8.conf  split-0.2.3.2-CJl40zTyCIV16Pr60nb7CT.conf  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve.conf  strict-0.3.2-BBOmnAYVsBNJUoZDQOsWvM.conf  text-1.2.2.2-KC7dWoG09dA1F6jKj5GSqh.conf  wx-0.92.3.0-7wJuE3qqzgx12G04yKbmai.conf  wxc-0.92.3.0-9Nq6Jp7RR2LLLEmKGlyJ3y.conf  wxcore-0.92.3.0-CebJ9qfQ3flKHPti1GH4K.conf  wxdirect-0.92.3.0-LWW4KzdSYghFJi8qk6ENNl.conf
.cabal-sandbox/x86_64-windows-ghc-8.0.2/base-compat-0.9.3-m1TEyTenyr5nJN40TpHVj/Foreign/: Compat.hi
.cabal-sandbox/x86_64-windows-ghc-8.0.2/base-compat-0.9.3-m1TEyTenyr5nJN40TpHVj/Numeric/: Compat.hi
.cabal-sandbox/x86_64-windows-ghc-8.0.2/base-compat-0.9.3-m1TEyTenyr5nJN40TpHVj/Prelude/: Compat.hi
.cabal-sandbox/x86_64-windows-ghc-8.0.2/parsec-3.1.11-DytKT37FVYQJRVdRwnazC8/Text/: Parsec.hi
.cabal-sandbox/x86_64-windows-ghc-8.0.2/strict-0.3.2-BBOmnAYVsBNJUoZDQOsWvM/Data/: Strict.hi
.cabal-sandbox/x86_64-windows-ghc-8.0.2/text-1.2.2.2-KC7dWoG09dA1F6jKj5GSqh/Data/: Text.hi
.cabal-sandbox/x86_64-windows-ghc-8.0.2/wxc-0.92.3.0-9Nq6Jp7RR2LLLEmKGlyJ3y/include/: wxc_def.h
.stack-work/install/58752683/pkgdb/: package.cache  (+1 more)
src/: Display.hs  Main.hs  Parser.hs  Solver.hs  Sudoku.hs
src/Sudoku/: Board.hs  Entry.hs
(+213 files in other folders)
