name:                sudoku-solver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/Lostcomb/sudoku-solver/src
license:             BSD3
license-file:        LICENSE
author:              Julian Loscombe
maintainer:          jl14910@my.bristol.ac.uk
copyright:           2017 Julian Loscombe
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sudoku-solver
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, parsec
  other-modules:       Parser,
                       Solver,
                       Sudoku
